crates/codegen-wasm/tests/snapshots/wat__a_class_instance_and_its_fields.snap
---
source: crates/codegen-wasm/tests/wat.rs
expression: "wat(\"class Point:\\n    x: int\\n    y: int = 0\\n\\nfn main():\\n    p = Point(x=1)\\n    p.y = 2\\n    print(p.x + p.y)\\n\")"
---
(module $typhoon
  (type (;0;) (func))
  (type (;1;) (func (param i32) (result i32)))
  (type (;2;) (func (param i64)))
  (type (;3;) (func (param i32)))
  (import "env" "memory" (memory (;0;) 0))
  (import "env" "ty_rt_init" (func $ty_rt_init (;0;) (type 0)))
  (import "env" "ty_rt_exit" (func $ty_rt_exit (;1;) (type 3)))
  (import "env" "ty_alloc_atomic" (func $ty_alloc_atomic (;2;) (type 1)))
  (import "env" "ty_print_int" (func $ty_print_int (;3;) (type 2)))
  (import "env" "ty_print_end" (func $ty_print_end (;4;) (type 0)))
  (export "_start" (func $_start))
  (func $ty_user_main (;5;) (type 0)
    (local i32 i64 i64 i32 i32 i64 i32 i32 i64)
    i64.const 1
    local.set 1
    i64.const 0
    local.set 2
    i32.const 16
    call $ty_alloc_atomic
    local.set 3
    local.get 3
    local.get 1
    i64.store
    local.get 3
    local.get 2
    i64.store offset=8
    local.get 3
    local.set 0
    local.get 0
    local.set 4
    i64.const 2
    local.set 5
    local.get 4
    local.get 5
    i64.store offset=8
    local.get 0
    local.set 6
    local.get 6
    i64.load
    local.get 0
    local.set 7
    local.get 7
    i64.load offset=8
    i64.add
    local.set 8
    local.get 8
    call $ty_print_int
    call $ty_print_end
  )
  (func $_start (;6;) (type 0)
    call $ty_rt_init
    call $ty_user_main
    i32.const 0
    call $ty_rt_exit
    unreachable
  )
)
