crates/codegen-wasm/tests/snapshots/wat__a_list_literal_and_an_index.snap
---
source: crates/codegen-wasm/tests/wat.rs
expression: "wat(\"fn main():\\n    xs = [1, 2, 3]\\n    xs.append(4)\\n    print(xs[-1], len(xs))\\n\")"
---
(module $typhoon
  (type (;0;) (func))
  (type (;1;) (func (param i64 i32 i64) (result i32)))
  (type (;2;) (func (param i32 i64 i32 i64)))
  (type (;3;) (func (param i32 i32)))
  (type (;4;) (func (param i64)))
  (type (;5;) (func (param i32) (result i32)))
  (type (;6;) (func (param i32)))
  (import "env" "memory" (memory (;0;) 0))
  (import "env" "ty_rt_init" (func $ty_rt_init (;0;) (type 0)))
  (import "env" "ty_rt_exit" (func $ty_rt_exit (;1;) (type 6)))
  (import "env" "ty_panic" (func $ty_panic (;2;) (type 3)))
  (import "env" "ty_alloc_atomic" (func $ty_alloc_atomic (;3;) (type 5)))
  (import "env" "ty_print_int" (func $ty_print_int (;4;) (type 4)))
  (import "env" "ty_print_sep" (func $ty_print_sep (;5;) (type 0)))
  (import "env" "ty_print_end" (func $ty_print_end (;6;) (type 0)))
  (import "env" "ty_list_new" (func $ty_list_new (;7;) (type 1)))
  (import "env" "ty_list_grow" (func $ty_list_grow (;8;) (type 2)))
  (global (;0;) (mut i32) i32.const 0)
  (export "_start" (func $_start))
  (func $ty_user_main (;9;) (type 0)
    (local i32 i64 i64 i64 i32 i32 i32 i32 i32 i64 i32 i64 i64 i64 i32 i32 i32 i64 i64 i64 i32 i32 i64 i64)
    i64.const 1
    local.set 1
    i64.const 2
    local.set 2
    i64.const 3
    local.set 3
    i64.const 8
    i32.const 1
    i64.const 3
    call $ty_list_new
    local.set 4
    local.get 4
    i32.load offset=16
    local.set 5
    local.get 5
    i32.const 0
    i32.add
    local.set 6
    local.get 6
    local.get 1
    i64.store
    local.get 5
    i32.const 8
    i32.add
    local.set 7
    local.get 7
    local.get 2
    i64.store
    local.get 5
    i32.const 16
    i32.add
    local.set 8
    local.get 8
    local.get 3
    i64.store
    i64.const 3
    local.set 9
    local.get 4
    local.get 9
    i64.store
    local.get 4
    local.set 0
    local.get 0
    local.set 10
    i64.const 4
    local.set 11
    local.get 10
    i64.load
    local.set 12
    local.get 12
    i64.const 1
    i64.add
    local.set 13
    local.get 12
    local.get 10
    i64.load offset=8
    i64.ge_s
    if ;; label = @1
      local.get 10
      i64.const 8
      i32.const 1
      local.get 13
      call $ty_list_grow
    end
    local.get 10
    i32.load offset=16
    local.set 14
    local.get 14
    local.get 12
    i32.wrap_i64
    i32.const 8
    i32.mul
    i32.add
    local.set 15
    local.get 15
    local.get 11
    i64.store
    local.get 10
    local.get 13
    i64.store
    local.get 0
    local.set 16
    i64.const -1
    local.set 17
    local.get 16
    i64.load
    local.set 18
    local.get 17
    local.set 19
    local.get 17
    local.get 18
    i64.lt_u
    i32.eqz
    if ;; label = @1
      local.get 17
      local.get 18
      i64.add
      local.set 19
      local.get 17
      i64.const 0
      i64.lt_s
      local.get 19
      local.get 18
      i64.lt_u
      i32.and
      i32.eqz
      if ;; label = @2
        global.get 0
        i32.const 23
        call $ty_panic
        unreachable
      end
    end
    local.get 16
    i32.load offset=16
    local.set 20
    local.get 20
    local.get 19
    i32.wrap_i64
    i32.const 8
    i32.mul
    i32.add
    local.set 21
    local.get 21
    i64.load
    local.set 22
    local.get 0
    i64.load
    local.set 23
    local.get 22
    call $ty_print_int
    call $ty_print_sep
    local.get 23
    call $ty_print_int
    call $ty_print_end
  )
  (func $_start (;10;) (type 0)
    call $ty_rt_init
    i32.const 23
    call $ty_alloc_atomic
    global.set 0
    global.get 0
    i32.const 0
    i32.const 23
    memory.init 0
    call $ty_user_main
    i32.const 0
    call $ty_rt_exit
    unreachable
  )
  (data (;0;) "list index out of range")
)
