crates/codegen-wasm/tests/snapshots/wat__builtins_without_a_wasm_instruction.snap
---
source: crates/codegen-wasm/tests/wat.rs
expression: "wat(\"fn main():\\n    n = -3\\n    x = -1.5\\n    print(abs(n), abs(x))\\n    print(min(1, 2), max(1.0, 2.0))\\n    print(float(n), int(x))\\n\")"
---
(module $typhoon
  (type (;0;) (func))
  (type (;1;) (func (param i64)))
  (type (;2;) (func (param f64)))
  (type (;3;) (func (param i32)))
  (import "env" "memory" (memory (;0;) 0))
  (import "env" "ty_rt_init" (func $ty_rt_init (;0;) (type 0)))
  (import "env" "ty_rt_exit" (func $ty_rt_exit (;1;) (type 3)))
  (import "env" "ty_print_int" (func $ty_print_int (;2;) (type 1)))
  (import "env" "ty_print_float" (func $ty_print_float (;3;) (type 2)))
  (import "env" "ty_print_sep" (func $ty_print_sep (;4;) (type 0)))
  (import "env" "ty_print_end" (func $ty_print_end (;5;) (type 0)))
  (export "_start" (func $_start))
  (func $ty_user_main (;6;) (type 0)
    (local i64 f64 i64 i64 f64 i64 i64 i64 f64 f64 f64 f64 i64)
    i64.const -3
    local.set 0
    f64.const -0x1.8p+0 (;=-1.5;)
    local.set 1
    local.get 0
    local.set 2
    i64.const 0
    local.get 2
    i64.sub
    local.get 2
    local.get 2
    i64.const 0
    i64.lt_s
    select
    local.set 3
    local.get 1
    f64.abs
    local.set 4
    local.get 3
    call $ty_print_int
    call $ty_print_sep
    local.get 4
    call $ty_print_float
    call $ty_print_end
    i64.const 1
    local.set 5
    i64.const 2
    local.set 6
    local.get 6
    local.get 5
    local.get 6
    local.get 5
    i64.lt_s
    select
    local.set 7
    f64.const 0x1p+0 (;=1;)
    local.set 8
    f64.const 0x1p+1 (;=2;)
    local.set 9
    local.get 9
    local.get 8
    local.get 9
    local.get 8
    f64.gt
    select
    local.set 10
    local.get 7
    call $ty_print_int
    call $ty_print_sep
    local.get 10
    call $ty_print_float
    call $ty_print_end
    local.get 0
    f64.convert_i64_s
    local.set 11
    local.get 1
    i64.trunc_sat_f64_s
    local.set 12
    local.get 11
    call $ty_print_float
    call $ty_print_sep
    local.get 12
    call $ty_print_int
    call $ty_print_end
  )
  (func $_start (;7;) (type 0)
    call $ty_rt_init
    call $ty_user_main
    i32.const 0
    call $ty_rt_exit
    unreachable
  )
)
