crates/codegen-wasm/tests/snapshots/wat__f_strings_build_a_string.snap
---
source: crates/codegen-wasm/tests/wat.rs
expression: "wat(\"fn main():\\n    n = 2\\n    x = 1.5\\n    print(f\\\"n={n} x={x:.2f}\\\")\\n\")"
---
(module $typhoon
  (type (;0;) (func))
  (type (;1;) (func (param i64) (result i32)))
  (type (;2;) (func (param i32 i32) (result i32)))
  (type (;3;) (func (param f64 i64) (result i32)))
  (type (;4;) (func (param i32 i32)))
  (type (;5;) (func (param i32) (result i32)))
  (type (;6;) (func (param i32)))
  (import "env" "memory" (memory (;0;) 0))
  (import "env" "ty_rt_init" (func $ty_rt_init (;0;) (type 0)))
  (import "env" "ty_rt_exit" (func $ty_rt_exit (;1;) (type 6)))
  (import "env" "ty_alloc_atomic" (func $ty_alloc_atomic (;2;) (type 5)))
  (import "env" "ty_print_str" (func $ty_print_str (;3;) (type 4)))
  (import "env" "ty_print_end" (func $ty_print_end (;4;) (type 0)))
  (import "env" "ty_str_concat" (func $ty_str_concat (;5;) (type 2)))
  (import "env" "ty_str_from_int" (func $ty_str_from_int (;6;) (type 1)))
  (import "env" "ty_str_from_float_fixed" (func $ty_str_from_float_fixed (;7;) (type 3)))
  (global (;0;) (mut i32) i32.const 0)
  (global (;1;) (mut i32) i32.const 0)
  (export "_start" (func $_start))
  (func $ty_user_main (;8;) (type 0)
    (local i64 f64 i32)
    i64.const 2
    local.set 0
    f64.const 0x1.8p+0 (;=1.5;)
    local.set 1
    global.get 0
    local.get 0
    call $ty_str_from_int
    call $ty_str_concat
    global.get 1
    call $ty_str_concat
    local.get 1
    i64.const 2
    call $ty_str_from_float_fixed
    call $ty_str_concat
    local.set 2
    local.get 2
    i32.const 16
    i32.add
    local.get 2
    i64.load
    i32.wrap_i64
    call $ty_print_str
    call $ty_print_end
  )
  (func $_start (;9;) (type 0)
    call $ty_rt_init
    i32.const 18
    call $ty_alloc_atomic
    global.set 0
    global.get 0
    i64.const 2
    i64.store
    global.get 0
    i64.const 2
    i64.store offset=8
    global.get 0
    i32.const 16
    i32.add
    i32.const 0
    i32.const 2
    memory.init 0
    i32.const 19
    call $ty_alloc_atomic
    global.set 1
    global.get 1
    i64.const 3
    i64.store
    global.get 1
    i64.const 3
    i64.store offset=8
    global.get 1
    i32.const 16
    i32.add
    i32.const 0
    i32.const 3
    memory.init 1
    call $ty_user_main
    i32.const 0
    call $ty_rt_exit
    unreachable
  )
  (data (;0;) "n=")
  (data (;1;) " x=")
)
