crates/codegen-wasm/tests/snapshots/wat__integer_floor_division_and_modulo.snap
---
source: crates/codegen-wasm/tests/wat.rs
expression: "wat(\"fn divide(a: int, b: int) -> int:\\n    return a // b\\n\\nfn main():\\n    print(divide(-7, 2))\\n    print(-7 % 2)\\n    print(7 / 2)\\n\")"
---
(module $typhoon
  (type (;0;) (func (param i64 i64) (result i64)))
  (type (;1;) (func (param i32 i32)))
  (type (;2;) (func))
  (type (;3;) (func (param i64)))
  (type (;4;) (func (param f64)))
  (type (;5;) (func (param i32) (result i32)))
  (type (;6;) (func (param i32)))
  (import "env" "memory" (memory (;0;) 0))
  (import "env" "ty_rt_init" (func $ty_rt_init (;0;) (type 2)))
  (import "env" "ty_rt_exit" (func $ty_rt_exit (;1;) (type 6)))
  (import "env" "ty_panic" (func $ty_panic (;2;) (type 1)))
  (import "env" "ty_alloc_atomic" (func $ty_alloc_atomic (;3;) (type 5)))
  (import "env" "ty_print_int" (func $ty_print_int (;4;) (type 3)))
  (import "env" "ty_print_float" (func $ty_print_float (;5;) (type 4)))
  (import "env" "ty_print_end" (func $ty_print_end (;6;) (type 2)))
  (global (;0;) (mut i32) i32.const 0)
  (export "_start" (func $_start))
  (func $ty_user_divide (;7;) (type 0) (param i64 i64) (result i64)
    (local i64 i64 i64 i64 i32 i64)
    local.get 0
    local.set 2
    local.get 1
    local.set 3
    local.get 3
    i64.eqz
    if ;; label = @1
      global.get 0
      i32.const 24
      call $ty_panic
      unreachable
    end
    i64.const 1
    local.get 3
    local.get 2
    i64.const -9223372036854775808
    i64.eq
    local.get 3
    i64.const -1
    i64.eq
    i32.and
    select
    local.set 4
    local.get 2
    local.get 4
    i64.rem_s
    local.set 5
    local.get 5
    i64.eqz
    i32.eqz
    local.get 5
    i64.const 0
    i64.lt_s
    local.get 3
    i64.const 0
    i64.lt_s
    i32.xor
    i32.and
    local.set 6
    local.get 2
    local.get 4
    i64.div_s
    local.tee 7
    i64.const 1
    i64.sub
    local.get 7
    local.get 6
    select
    return
    unreachable
  )
  (func $ty_user_main (;8;) (type 2)
    (local i64 i64 i64 i64 i32 i64 i64 i64 f64)
    i64.const -7
    i64.const 2
    call $ty_user_divide
    local.set 0
    local.get 0
    call $ty_print_int
    call $ty_print_end
    i64.const -7
    local.set 1
    i64.const 2
    local.set 2
    local.get 1
    local.get 2
    i64.rem_s
    local.set 3
    local.get 3
    i64.eqz
    i32.eqz
    local.get 3
    i64.const 0
    i64.lt_s
    local.get 2
    i64.const 0
    i64.lt_s
    i32.xor
    i32.and
    local.set 4
    local.get 3
    local.get 2
    i64.add
    local.get 3
    local.get 4
    select
    local.set 5
    local.get 5
    call $ty_print_int
    call $ty_print_end
    i64.const 7
    local.set 6
    i64.const 2
    local.set 7
    local.get 6
    f64.convert_i64_s
    local.get 7
    f64.convert_i64_s
    f64.div
    local.set 8
    local.get 8
    call $ty_print_float
    call $ty_print_end
  )
  (func $_start (;9;) (type 2)
    call $ty_rt_init
    i32.const 24
    call $ty_alloc_atomic
    global.set 0
    global.get 0
    i32.const 0
    i32.const 24
    memory.init 0
    call $ty_user_main
    i32.const 0
    call $ty_rt_exit
    unreachable
  )
  (data (;0;) "integer division by zero")
)
