crates/codegen-wasm/tests/snapshots/wat__powers_use_sqrt_multiply_and_the_runtime.snap
---
source: crates/codegen-wasm/tests/wat.rs
expression: "wat(\"fn main():\\n    x = 2.0\\n    n = 3\\n    print(x ** 0.5)\\n    print(x ** 2.0)\\n    print(x ** 3.0)\\n    print(n ** 2)\\n    print(n ** n)\\n\")"
---
(module $typhoon
  (type (;0;) (func))
  (type (;1;) (func (param f64)))
  (type (;2;) (func (param f64 f64) (result f64)))
  (type (;3;) (func (param i64)))
  (type (;4;) (func (param i64 i64) (result i64)))
  (type (;5;) (func (param i32)))
  (import "env" "memory" (memory (;0;) 0))
  (import "env" "ty_rt_init" (func $ty_rt_init (;0;) (type 0)))
  (import "env" "ty_rt_exit" (func $ty_rt_exit (;1;) (type 5)))
  (import "env" "ty_print_int" (func $ty_print_int (;2;) (type 3)))
  (import "env" "ty_print_float" (func $ty_print_float (;3;) (type 1)))
  (import "env" "ty_print_end" (func $ty_print_end (;4;) (type 0)))
  (import "env" "ty_int_pow" (func $ty_int_pow (;5;) (type 4)))
  (import "env" "ty_float_pow" (func $ty_float_pow (;6;) (type 2)))
  (export "_start" (func $_start))
  (func $ty_user_main (;7;) (type 0)
    (local f64 i64 f64 f64 f64 f64 i64 i64 i64)
    f64.const 0x1p+1 (;=2;)
    local.set 0
    i64.const 3
    local.set 1
    local.get 0
    f64.sqrt
    local.set 2
    local.get 2
    call $ty_print_float
    call $ty_print_end
    local.get 0
    local.tee 3
    local.get 3
    f64.mul
    local.set 4
    local.get 4
    call $ty_print_float
    call $ty_print_end
    local.get 0
    f64.const 0x1.8p+1 (;=3;)
    call $ty_float_pow
    local.set 5
    local.get 5
    call $ty_print_float
    call $ty_print_end
    local.get 1
    local.tee 6
    local.get 6
    i64.mul
    local.set 7
    local.get 7
    call $ty_print_int
    call $ty_print_end
    local.get 1
    local.get 1
    call $ty_int_pow
    local.set 8
    local.get 8
    call $ty_print_int
    call $ty_print_end
  )
  (func $_start (;8;) (type 0)
    call $ty_rt_init
    call $ty_user_main
    i32.const 0
    call $ty_rt_exit
    unreachable
  )
)
