crates/codegen-wasm/tests/snapshots/wat__tuples_are_scalarised_into_locals.snap
---
source: crates/codegen-wasm/tests/wat.rs
expression: "wat(\"fn pair(n: int) -> tuple<int, bool>:\\n    return (n, n > 0)\\n\\nfn main():\\n    a, b = pair(2)\\n    print(a, b)\\n    print(pair(1) == pair(1))\\n\")"
---
(module $typhoon
  (type (;0;) (func (param i64) (result i64 i32)))
  (type (;1;) (func))
  (type (;2;) (func (param i64)))
  (type (;3;) (func (param i32)))
  (import "env" "memory" (memory (;0;) 0))
  (import "env" "ty_rt_init" (func $ty_rt_init (;0;) (type 1)))
  (import "env" "ty_rt_exit" (func $ty_rt_exit (;1;) (type 3)))
  (import "env" "ty_print_int" (func $ty_print_int (;2;) (type 2)))
  (import "env" "ty_print_bool" (func $ty_print_bool (;3;) (type 3)))
  (import "env" "ty_print_sep" (func $ty_print_sep (;4;) (type 1)))
  (import "env" "ty_print_end" (func $ty_print_end (;5;) (type 1)))
  (export "_start" (func $_start))
  (func $ty_user_pair (;6;) (type 0) (param i64) (result i64 i32)
    local.get 0
    local.get 0
    i64.const 0
    i64.gt_s
    return
    unreachable
  )
  (func $ty_user_main (;7;) (type 1)
    (local i64 i32 i64 i32 i64 i32 i64 i32 i64 i32 i64 i32 i64 i32 i32)
    i64.const 2
    call $ty_user_pair
    local.set 1
    local.set 0
    local.get 0
    local.get 1
    local.set 5
    local.set 4
    local.get 4
    local.set 2
    local.get 0
    local.get 1
    local.set 7
    local.set 6
    local.get 7
    local.set 3
    local.get 2
    local.set 8
    local.get 3
    local.set 9
    local.get 8
    call $ty_print_int
    call $ty_print_sep
    local.get 9
    call $ty_print_bool
    call $ty_print_end
    i64.const 1
    call $ty_user_pair
    local.set 11
    local.set 10
    i64.const 1
    call $ty_user_pair
    local.set 13
    local.set 12
    local.get 10
    local.get 12
    i64.eq
    local.get 11
    local.get 13
    i32.eq
    i32.and
    local.set 14
    local.get 14
    call $ty_print_bool
    call $ty_print_end
  )
  (func $_start (;8;) (type 1)
    call $ty_rt_init
    call $ty_user_main
    i32.const 0
    call $ty_rt_exit
    unreachable
  )
)
